@@ -1,4 +1,6 @@
 - fix buttons order under KDE when using compiz (by detecting kde-window-decorator)
+- drakclock/finish-install: disable DPMS and screensaver when setting time,
+  not to blank monitor (#17031)
 
 Version 10.5.0 - 15 October 2007, by Thierry Vignaud
 
